# pymssql-utils

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-lint.yml  python-publish.yml  python-test.yml
pymssqlutils/: __init__.py  databaseresult.py  helpers.py  methods.py
tests/: conftest.py  helpers.py  test_database.py  test_databaseresult.py  test_execute.py  test_main.py  test_methods.py  test_on_database.py
