[tool.poetry]
name = "pymssql-utils"
version = "0.1.0-alpha0"
description = "pymssql-utils is a small library that wraps pymssql to make your life easier."
authors = ["Tim OSullivan <tim@lanster.dev>"]
license = "GNU LGPLv2.1"
homepage = "https://github.com/invokermain/pymssql-utils"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database",
    "Typing :: Typed",
]
packages = [
    { include = "pymssqlutils" },
]

[tool.poetry.dependencies]
python = ">=3.7,<=3.10"
pymssql = "~2"
orjson = { version = ">=3.4.0,<4.0.0", optional = true }
pandas = { version = ">=1.0.0,<2.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "~6"
pytest-mock = ">=3.6.0,<4.0.0"
pytest-dotenv = ">=0.5.0,<1.0.0"

[tool.poetry.extras]
json = ["orjson"]
pandas = ["pandas"]
all = ["orjson", "pandas"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
