[tool.poetry]
name = "pymssql-utils"
version = "0.2.0"
description = "pymssql-utils is a small library that wraps pymssql to make your life easier."
authors = ["Tim OSullivan <tim@lanster.dev>"]
license = "GNU LGPLv2.1"
homepage = "https://github.com/invokermain/pymssql-utils"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database",
    "Typing :: Typed",
]
packages = [
    { include = "pymssqlutils" },
]

[tool.poetry.dependencies]
python = "^3.7"
pymssql = "^2.1.4"
orjson = { version = ">=3.4.0,<4.0.0", optional = true }
pandas = { version = ">=1.0.0,<2.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "~6"
pytest-mock = ">=3.6.0,<4.0.0"
pytest-dotenv = ">=0.5.0,<1.0.0"
black = "^21.12b0"
flake8 = "^4"
isort = "^5.9.2"
pyright = "^0.0.13"
coverage = "^6.2"

[tool.poetry.extras]
json = ["orjson"]
pandas = ["pandas"]
all = ["orjson", "pandas"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88

[tool.pyright]
include = ["pymssqlutils"]
exclude = ["tests"]
