[tool.poetry]
name = "pymssql-utils"
version = "0.4.2"
description = "pymssql-utils is a small library that wraps pymssql to make your life easier."
authors = ["Tim OSullivan <tim@lanster.dev>"]
license = "GNU LGPLv2.1"
homepage = "https://github.com/invokermain/pymssql-utils"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Typing :: Typed",
]
packages = [
    { include = "pymssqlutils" },
]

[tool.poetry.dependencies]
python = "^3.7"
pymssql = "^2.1.4"
orjson = { version = "*", optional = true }
pandas = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-mock = "^3"
pytest-dotenv = ">=0.5.0,<1.0.0"
black = "^22"
flake8 = "^5"
isort = "^5"
coverage = "^6"
mypy = ">=0.971"
types-pymssql = "^2.1.0"

[tool.poetry.extras]
json = ["orjson"]
pandas = ["pandas"]
all = ["orjson", "pandas"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
env_files = "./tests/.env"

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
strict = true
